samples/webapp-template-app-react-sample-b2x-experimental/force-app/main/default/objects/Maintenance_Worker__c/Maintenance_Worker__c.object-meta.xml
<CustomObject>
    <label>Maintenance Worker</label>
    <nameField>
        <label>Worker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maintenance Workers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>