samples/webapp-template-app-react-sample-b2x-experimental/force-app/main/default/objects/Maintenance_Worker__c/fields/Certifications__c.field-meta.xml
<CustomField>
    <fullName>Certifications__c</fullName>
    <label>Certifications</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>