samples/webapp-template-app-react-sample-b2x-experimental/force-app/main/default/objects/Maintenance_Worker__c/fields/Employment_Type__c.field-meta.xml
<CustomField>
    <fullName>Employment_Type__c</fullName>
    <label>Employment Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal Employee</fullName>
                <default>true</default>
                <label>Internal Employee</label>
            </value>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>Third-Party Vendor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>