samples/webapp-template-app-react-sample-b2x-experimental/force-app/main/default/objects/Maintenance_Worker__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>TextArea</type>
</CustomField>