samples/webapp-template-app-react-sample-b2x-experimental/force-app/main/default/objects/Maintenance_Worker__c/fields/Profile_Picture_URL__c.field-meta.xml
<CustomField>
    <fullName>Profile_Picture_URL__c</fullName>
    <label>Profile Picture URL</label>
    <type>Url</type>
</CustomField>